--- a/src/Components/Recruiter/Recruiter.module.css
+++ b/src/Components/Recruiter/Recruiter.module.css
@@ -260,7 +260,16 @@
     right: 57px;
     top: 120px;
 }
-.recruitersignupformdata input[type="text"],input[type="password"],input[type="number1"],input[type="number2"]{
+.recruitersignupformdata input[type="text"],input[type="number1"],input[type="number2"]{
+    border:none;
+    outline: none;
+    border-bottom:1px solid black;
+    height: 70px;
+    width: 100%;
+    padding: 1px;
+    border-radius: 0%;
+}
+.recruitersignupformdata input[type="password"]{
     border:none;
     outline: none;
     border-bottom:1px solid black;
@@ -708,4 +717,9 @@ margin-right: 20px;
     background: -moz-linear-gradient(top,#7751e0 0%,#3f51b5 100%)!important;
     background: -webkit-linear-gradient(top,#7751e0 0%,#3f51b5 100%)!important;
     background: linear-gradient(to bottom,#7751e0 0%,#3f51b5 100%)!important;
+}
+
+.error{
+    margin-top: 5px;
+    color:red
 }
