--- a/src/Styles/JobListingNavbar.module.css
+++ b/src/Styles/JobListingNavbar.module.css
@@ -1,12 +1,13 @@
 .navbar_wrapper{
     padding: 3px;
-    background: white;
-    width: 100%;
+    background: white  ;
+    width: 50%;
+    height: 65px;
     font-family: "PT Sans",sans-serif;
-    font-size: 13px;
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.1);
-    color: #303e4b;
-    font-weight: 600;
+    font-size: 18px;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.1);
+    color:black;
+    font-weight: 400;
     position: fixed;
     top: 0;
     right: 0;
@@ -16,6 +17,8 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+
 .logo {
     width: 80px;
     height: 55px;
@@ -31,11 +34,12 @@
 }
 
 .covid {
-    background: #fff4f6 !important;
+    background: #FFF4F6 !important;
     border: solid 1px #ffdfcc !important;
     border-radius: 4px;
     margin-top: 8px;
-    padding: 0.5rem;
+    padding: 0.5px;
+    font-size: smaller;
 }
 .covid:hover {
     cursor: pointer;
@@ -49,3 +53,28 @@
     font-size: 11px;
     opacity: 0.5;
 }
+
+.navbar_main{
+    padding: 3px;
+    height: 65px;
+    background:white;
+    width: 100%;
+    font-family: "PT Sans",sans-serif;
+    font-size: 13px;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.1);
+    color:white;
+    font-weight: 600;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    display: flex;
+    justify-content:flex-end;
+    align-items: center;    
+}
+
+.navbar_main p{
+    margin-top:8px;
+}
+
