--- a/src/Styles/Dashboard.module.css
+++ b/src/Styles/Dashboard.module.css
@@ -22,9 +22,11 @@
 .logo {
     width: 80px;
     height: 55px;
+    margin:0px 40px;
 }
 .links,.links_border {
     padding: 8px 10px;
+    font-size: 14px;
 }
 .links:hover,.links_border:hover {
     cursor: pointer;
@@ -42,16 +44,22 @@
     font-size: smaller;
 }
 .covid:hover {
+    border:1px solid black;
+
     cursor: pointer;
 }
 
 .links_border {
     border: 1px solid white;
     border-radius: 5px;
+    border:1px solid black;
+
 }
 .contact p:last-child {
     font-size: 11px;
     opacity: 0.5;
+    border:1px solid black;
+
 }
 
 .navbar_main{
@@ -72,6 +80,7 @@
     display: flex;
     justify-content:flex-end;
     align-items: center;    
+
 }
 
 .navbar_main p{
