--- a/src/Styles/Dashboard.module.css
+++ b/src/Styles/Dashboard.module.css
@@ -1,7 +1,7 @@
 .navbar_wrapper{
     padding: 3px;
-    background: linear-gradient(135deg,#5a3ea5 0%,#4b30bd 50%,#4b30bd 100%)    ;
-    width: 50%;
+    background: linear-gradient(135deg,#5a3ea5 0%,#4b30bd 50%,#4b30bd 100%);
+    width: 70%;
     height: 65px;
     font-family: "PT Sans",sans-serif;
     font-size: 18px;
@@ -36,16 +36,13 @@
 }
 
 .covid {
-    background: #AC7BDF !important;
-    border: solid 1px #ffdfcc !important;
+    background: #AC7BDF;
     border-radius: 4px;
     margin-top: 8px;
-    padding: 0.5px;
+    padding: 8px 10px;
     font-size: smaller;
 }
 .covid:hover {
-    border:1px solid black;
-
     cursor: pointer;
 }
 
