--- a/src/Styles/HomeMid.module.css
+++ b/src/Styles/HomeMid.module.css
@@ -2,7 +2,7 @@
     background: url(https://static1.shine.com/c/s1/images/candidate/new/home_base_new.jpg?082845ca1c59) #6345db;
     height: 285px;
     color: #fff;
-    margin-top: 60px;
+    margin-top: 50px;
     font-family: "PT Sans",sans-serif;
 }
 .content {
@@ -26,7 +26,7 @@
 }
 .white_box {
     height: 30px;
-    padding: 0.6rem;
+    padding: 1.3rem;
     font-size: 15px;
     background-color: #fff;
     box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
@@ -39,12 +39,11 @@
 }
 .white_box p {
     color: #546473;
-    padding-left: 0.8rem;
 }
 
 .registration {
-    flex-basis: 330px;
-    height: 70px;
+    flex-basis: 430px;
+    box-sizing: border-box;
     background: url(https://static1.shine.com/c/s1/images/candidate/new/home_reg.png?082845ca1c59);
     margin-top: 2.5rem;
     margin-right: 4.5rem;
@@ -52,7 +51,7 @@
     border-radius: 5px;
 }
 
-.registration button {
+.registration > button {
     background: #f7a400;
     box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
     border: none;
@@ -62,6 +61,10 @@
     color: white;
     border-radius: 5px;
     padding: 8px;
+}
+.registration > button > a {
+    text-decoration: none;
+    color: white;
 }
 
 .registration button:hover {
@@ -179,7 +182,7 @@
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 40px;
-    height: 269px;
+    height: 359px;
     padding-top: 90px;
     color: #fff;
     font-family: "PT Sans",sans-serif;
@@ -225,6 +228,7 @@
 }
 .premium_content > div > div {
     display: flex;
+    align-items: center;
 }
 .premium_content > div > div:nth-child(n+2) {
     margin-left: 20px;
@@ -398,10 +402,10 @@
 
 .shine_learning {
     width: 100%;
-    height: 320px;
+    height: 360px;
     padding-right: 15px;
     padding-left: 15px;
-    margin-top: -81px;
+    margin-top: -71px;
     color: #fff;
     padding-bottom: 30px;
     margin-bottom: 30px;
@@ -535,7 +539,7 @@
 .recruit_smart {
     font-size: 16px;
     background: #f5f9fb;
-    height: 300px;
+    height: 320px;
     line-height: 20px;
     text-align: center;
 }
@@ -604,9 +608,10 @@
 }
 .footer * {
     list-style: none;
+    margin: 0;
 }
 .footer_top p {
-    margin: 1rem 0rem;
+    margin: 5px 0px;
     font-size: 13px;
     color: #4456BB;
 }
@@ -619,14 +624,14 @@
 .download_app {
     background: #fff;
     box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
-    width: 150px;
+    width: 180px;
     border-radius: 5px;
     font-size: 14px;
     color: #5364c4;
     text-align: center;
     padding: 15px;
     border: solid 1px #5364c4;
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 .footer_base {
