--- a/src/Styles/Navbar.module.css
+++ b/src/Styles/Navbar.module.css
@@ -1,11 +1,10 @@
-.navbar_wrapper{
-    padding: 3px;
-    background: linear-gradient(135deg,#5a3ea5 0%,#4b30bd 50%,#4b30bd 100%)    ;
-    width: 60%;
-    height: 65px;
+.navbar_main {
+    background: linear-gradient(135deg,#5a3ea5 0%,#4b30bd 50%,#4b30bd 100%);
+    padding: 1px;
+    width: 100%;
     font-family: "PT Sans",sans-serif;
-    font-size: 18px;
-    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.1);
+    font-size: 15px;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.1);
     color:white;
     font-weight: 400;
     position: fixed;
@@ -14,17 +13,36 @@
     left: 0;
     z-index: 1030;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content:space-between;
+    align-items: center;    
 }
 
+.navbar_left{
+    width: 65%;
+    font-size: 15px;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.1);
+    color:white;
+    font-weight: 400;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.navbar_right {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    margin-right: 20px;
+}
 
 .logo {
     width: 80px;
     height: 55px;
 }
 .links,.links_border {
-    padding: 8px 10px;
+    padding: 6px 10px;
+    margin-right: 1rem;
 }
 .links:hover,.links_border:hover {
     cursor: pointer;
@@ -34,12 +52,9 @@
 }
 
 .covid {
-    background: #AC7BDF !important;
-    border: solid 1px #ffdfcc !important;
+    background: #AC7BDF;
     border-radius: 4px;
-    margin-top: 8px;
-    padding: 0.5px;
-    font-size: smaller;
+    padding: 6px 12px;
 }
 .covid:hover {
     cursor: pointer;
@@ -49,32 +64,11 @@
     border: 1px solid white;
     border-radius: 5px;
 }
+.contact p {
+    margin: 0;
+}
 .contact p:last-child {
     font-size: 11px;
     opacity: 0.5;
-}
-
-.navbar_main{
-    padding: 3px;
-    height: 65px;
-    background:#4B30BD;
-    width: 100%;
-    font-family: "PT Sans",sans-serif;
-    font-size: 13px;
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.1);
-    color:white;
-    font-weight: 600;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
-    display: flex;
-    justify-content:flex-end;
-    align-items: center;    
-}
-
-.navbar_main p{
-    margin-top:8px;
 }
 
